// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiQuickSelectPopover is rendered 1`] = `
<OuiPopover
  anchorClassName="ouiQuickSelectPopover__anchor"
  anchorPosition="downLeft"
  button={
    <OuiButtonEmpty
      aria-label="Date quick select"
      className="ouiFormControlLayout__prepend"
      data-test-subj="superDatePickerToggleQuickMenuButton"
      iconSide="right"
      iconType="arrowDown"
      isDisabled={false}
      onClick={[Function]}
      size="xs"
      textProps={
        Object {
          "className": "ouiQuickSelectPopover__buttonText",
        }
      }
    >
      <OuiIcon
        type="calendar"
      />
    </OuiButtonEmpty>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="m"
>
  <div
    className="ouiQuickSelectPopover__content"
    data-test-subj="superDatePickerQuickMenu"
  >
    <OuiQuickSelect
      applyTime={[Function]}
      end="now"
      start="now-15m"
    />
    <OuiCommonlyUsedTimeRanges
      applyTime={[Function]}
      commonlyUsedRanges={
        Array [
          Object {
            "end": "now/d",
            "label": "Today",
            "start": "now/d",
          },
        ]
      }
    />
    <OuiRecentlyUsed
      applyTime={[Function]}
      commonlyUsedRanges={
        Array [
          Object {
            "end": "now/d",
            "label": "Today",
            "start": "now/d",
          },
        ]
      }
      dateFormat="MMM D, YYYY @ HH:mm:ss.SSS"
      recentlyUsedRanges={
        Array [
          Object {
            "end": "now/d",
            "label": "Today",
            "start": "now/d",
          },
        ]
      }
    />
    <OuiRefreshInterval
      applyRefreshInterval={[Function]}
      isPaused={true}
      refreshInterval={0}
    />
  </div>
</OuiPopover>
`;

exports[`OuiQuickSelectPopover isAutoRefreshOnly 1`] = `
<OuiPopover
  anchorClassName="ouiQuickSelectPopover__anchor"
  anchorPosition="downLeft"
  button={
    <OuiButtonEmpty
      aria-label="Date quick select"
      className="ouiFormControlLayout__prepend"
      data-test-subj="superDatePickerToggleQuickMenuButton"
      iconSide="right"
      iconType="arrowDown"
      isDisabled={false}
      onClick={[Function]}
      size="xs"
      textProps={
        Object {
          "className": "ouiQuickSelectPopover__buttonText",
        }
      }
    >
      <OuiIcon
        type="clock"
      />
    </OuiButtonEmpty>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="m"
>
  <div
    className="ouiQuickSelectPopover__content"
    data-test-subj="superDatePickerQuickMenu"
  >
    <OuiRefreshInterval
      applyRefreshInterval={[Function]}
      isPaused={true}
      refreshInterval={0}
    />
  </div>
</OuiPopover>
`;
